<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center_horizontal" >

    <Space
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="2" />

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="4"
        android:orientation="vertical" >

        <TextView style="@style/HeaderText" android:text="@string/actions_title" android:layout_marginTop="20dp" />
        <View style="@style/HeaderDivider" android:layout_marginBottom="10dp" />

        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" >
            <TextView
                style="@style/LabelText"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/program_sort" />
            <ToggleButton
                android:id="@+id/btnSort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" >
            <TextView
                style="@style/LabelText"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/program_reset" />
            <ToggleButton
                android:id="@+id/btnReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <TextView style="@style/HeaderText" android:text="@string/feeder_title" android:layout_marginTop="20dp" />
        <View style="@style/HeaderDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical" >
                <TextView style="@style/LabelText" android:layout_width="match_parent" android:gravity="center" android:text="@string/state_detected" />
                <rtandroid.ballsort.ui.ColorView style="@style/ColorImage" android:id="@+id/cvDetectedBall" />
            </LinearLayout>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_arrow"
                android:contentDescription="@string/start" />

            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical" >
                <TextView style="@style/LabelText" android:layout_width="match_parent" android:gravity="center" android:text="@string/state_queued" />
                <rtandroid.ballsort.ui.ColorView style="@style/ColorImage" android:id="@+id/cvQueuedBall" />
            </LinearLayout>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_arrow"
                android:contentDescription="@string/start" />

            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical" >
                <TextView style="@style/LabelText" android:layout_width="match_parent" android:gravity="center" android:text="@string/state_dropped" />
                <rtandroid.ballsort.ui.ColorView style="@style/ColorImage" android:id="@+id/cvDropBall" />
            </LinearLayout>

        </LinearLayout>

        <TextView style="@style/HeaderText" android:text="@string/state_title" android:layout_marginTop="20dp" />
        <View style="@style/HeaderDivider" android:layout_marginBottom="10dp" />

        <TextView style="@style/LabelText" android:id="@+id/tvFeederState" android:text="@string/feeder_state" />
        <TextView style="@style/LabelText" android:id="@+id/tvSlingshotValveState" android:text="@string/slingshot_state" />
        <TextView style="@style/LabelText" android:id="@+id/tvSlingshotMotorState" android:text="@string/slingshot_motor" />
        <TextView style="@style/LabelText" android:id="@+id/tvBallsDropped" android:text="@string/dropped" android:layout_marginTop="10dp" />
        <TextView style="@style/LabelText" android:id="@+id/tvPatternCount" android:text="@string/pattern" />
        <TextView style="@style/LabelText" android:id="@+id/tvFreeMemory" android:text="@string/memory" />

    </LinearLayout>

    <Space
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView style="@style/HeaderText" android:text="@string/columns_title" android:layout_marginTop="20dp" />
        <View style="@style/HeaderDivider" />

        <GridView
            android:id="@+id/patternGrid"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:numColumns="6" >
        </GridView>

    </LinearLayout>

    <Space
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="2" />

</LinearLayout>